--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-watcher",
   "productName": "YouTube Watcher",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A minimal youtube watcher application",
   "main": "main.js",
   "scripts": {
@@ -13,7 +13,7 @@
   "author": "timlevett",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.8.4",
+    "electron": "^2.0.8",
     "electron-packager": "~11.2.0"
   },
   "dependencies": {
